--- a/ClearVision_v6.theme.css
+++ b/ClearVision_v6.theme.css
@@ -31,8 +31,8 @@
   --background-blur: 1px;
   --background-overlay: rgb(69,118,124,0.07);
   --user-popout-image: url('https://i.imgur.com/se7kAo6.jpg');
-  --user-popout-position: center;
-  --user-popout-size: cover;
+  --user-popout-position: center right;
+  --user-popout-size: 200%;
   --user-popout-repeat: no-repeat;
   --user-popout-attachment: fixed;
   --user-popout-brightness: 93%;
