--- a/ClearVision_v6.theme.css
+++ b/ClearVision_v6.theme.css
@@ -1,5 +1,5 @@
 /**
- * @name galaxy
+ * @name new pic
  * @author ClearVision Team
  * @version 6.3.0
  * @description Highly customizable and beautiful theme for BetterDiscord.
@@ -31,8 +31,8 @@
   --background-blur: 1px;
   --background-overlay: rgb(69,118,124,0.07);
   --user-popout-image: url('https://i.imgur.com/se7kAo6.jpg');
-  --user-popout-position: center right;
-  --user-popout-size: 200%;
+  --user-popout-position: center;
+  --user-popout-size: cover;
   --user-popout-repeat: no-repeat;
   --user-popout-attachment: fixed;
   --user-popout-brightness: 93%;
@@ -65,8 +65,8 @@
   --offline-color: #737373;
   --main-font: gg sans;
   --code-font: Consolas;
-  --channels-width: 220px;
-  --members-width: 240px;
+  --channels-width: 250px;
+  --members-width: 250px;
   --backdrop-overlay: rgba(0,0,0,0.8);
   --backdrop-image: var(--background-image);
   --backdrop-position: var(--background-position);
